# Rust

./: .gitignore  .graphifyignore  CLAUDE.md  Cargo.toml  README.md  example.md
Src/Services/admin-bff/: Cargo.toml  README.md  build.rs
Src/Services/admin-bff/config/: admin-bff.yaml.example
Src/Services/admin-bff/proto/: shared.proto  supplier.proto
Src/Services/admin-bff/src/: lib.rs  main.rs
Src/Services/admin-bff/src/api/: openapi.rs  router.rs
Src/Services/admin-bff/src/application/: config.rs  state.rs
Src/Services/auth-service/: Cargo.toml  build.rs
Src/Services/auth-service/migrations/: 0001_init_auth.sql
Src/Services/auth-service/proto/: auth.proto
Src/Services/auth-service/src/: lib.rs  main.rs
Src/Services/auth-service/src/api/: grpc.rs
Src/Services/auth-service/src/application/: commands.rs  deps.rs  handlers.rs  mod.rs  queries.rs  rules.rs
Src/Services/auth-service/src/domain/: entities.rs  enums.rs  events.rs  ids.rs  mod.rs  repositories.rs  token_service.rs
Src/Services/auth-service/src/infrastructure/: jwt_token_service.rs  mod.rs
Src/Services/customer-service/: Cargo.toml  build.rs
Src/Services/customer-service/migrations/: 0001_init_customer.sql
Src/Services/customer-service/proto/: customer.proto
Src/Services/customer-service/src/: lib.rs  main.rs
Src/Services/customer-service/src/api/: grpc.rs
Src/Services/customer-service/src/application/: commands.rs  deps.rs  handlers.rs  queries.rs  rules.rs
Src/Services/customer-service/src/domain/: blob.rs  entities.rs  enums.rs  events.rs  ids.rs  mod.rs  repositories.rs
Src/Services/inventory-service/: Cargo.toml  build.rs
Src/Services/inventory-service/proto/: inventory.proto
Src/Services/inventory-service/src/: lib.rs  main.rs
Src/Services/inventory-service/src/api/: grpc.rs
Src/Services/inventory-service/src/application/: commands.rs  deps.rs  handlers.rs  mod.rs  queries.rs
Src/Services/inventory-service/src/domain/: enums.rs  events.rs  ids.rs  mod.rs  repositories.rs  value_objects.rs
Src/Services/product-service/: Cargo.toml  build.rs
Src/Services/product-service/proto/: product.proto
Src/Services/product-service/src/: lib.rs
Src/Services/product-service/src/api/: grpc.rs
Src/Services/product-service/src/application/: deps.rs  queries.rs
Src/Services/product-service/src/domain/: aggregate.rs  events.rs  mod.rs
Src/Services/product-service/src/infrastructure/: in_memory_repo.rs
Src/Services/sales-service/: Cargo.toml  build.rs
Src/Services/sales-service/migrations/: 0001_init_sales.sql
Src/Services/sales-service/proto/: sales.proto
Src/Services/sales-service/src/: lib.rs  main.rs
Src/Services/sales-service/src/api/: grpc.rs
Src/Services/sales-service/src/application/: commands.rs  deps.rs  dtos.rs  integration_events.rs  mod.rs  queries.rs  saga.rs
Src/Services/sales-service/src/domain/: entities.rs  enums.rs  events.rs  ids.rs  mod.rs  repositories.rs
Src/Services/store-service/: Cargo.toml  build.rs
Src/Services/store-service/proto/: store.proto
Src/Services/store-service/src/: main.rs
Src/Services/store-service/src/application/: commands.rs  deps.rs  dtos.rs  integration_events.rs  mod.rs  queries.rs
Src/Services/store-service/src/domain/: enums.rs  events.rs  ids.rs  mod.rs  repositories.rs
Src/Services/supplier-service/: Cargo.toml  build.rs
Src/Services/supplier-service/migrations/: 0001_init_supplier.sql
Src/Services/supplier-service/src/: lib.rs  main.rs
Src/Services/supplier-service/src/api/: grpc.rs
Src/Services/supplier-service/src/application/: commands.rs  deps.rs  queries.rs
Src/Services/supplier-service/src/domain/: entities.rs  enums.rs  ids.rs  repositories.rs
Src/crates/ddd-api/: Cargo.toml  README.md
Src/crates/ddd-api/examples/: error_mapping.rs  grpc_server_full.rs  rest_server_full.rs
Src/crates/ddd-api/src/: lib.rs
Src/crates/ddd-api/src/common/: error_mapping.rs  mod.rs  pagination.rs
Src/crates/ddd-api/src/grpc/: auth.rs  error.rs  global_error_handler.rs  idempotency.rs  interceptor.rs  mapper.rs  metadata.rs  mod.rs  (+4 more)
Src/crates/ddd-api/tests/: public_api.rs
Src/crates/ddd-application/: Cargo.toml  README.md
Src/crates/ddd-application/examples/: idempotent_handler.rs  in_memory_fakes.rs  mediator_registration.rs  saga_orchestration.rs
Src/crates/ddd-application/src/: cqrs.rs  event_handling.rs  idempotency.rs  lib.rs  macros.rs  mediator.rs  pagination.rs  ports.rs  saga.rs  testing.rs  unit_of_work.rs  use_case.rs  validation.rs  validator_registry.rs
Src/crates/ddd-application/tests/: public_api.rs
Src/crates/ddd-bff/: Cargo.toml  README.md  build.rs
Src/crates/ddd-bff/examples/: grpc_client_pool.rs  openapi_catalogue.rs  transcode_errors.rs
Src/crates/ddd-bff/proto/: fixture.proto
Src/crates/ddd-bff/src/: config.rs  lib.rs  metrics.rs  proxy.rs
Src/crates/ddd-bff/tests/: public_api.rs
Src/crates/ddd-domain/: Cargo.toml  README.md
Src/crates/ddd-domain/examples/: aggregates.rs  policy_chains.rs  specifications.rs
Src/crates/ddd-domain/src/: aggregate.rs  domain_service.rs  entity.rs  error.rs  event.rs  lib.rs  macros.rs  policy.rs  repository.rs  specification.rs
Src/crates/ddd-domain/tests/: public_api.rs
Src/crates/ddd-infrastructure/: Cargo.toml  README.md
Src/crates/ddd-infrastructure/examples/: adapter_overview.rs  outbox_relay_jetstream.rs  outbox_relay_setup.rs  telemetry_init.rs
Src/crates/ddd-infrastructure/src/: lib.rs
Src/crates/ddd-infrastructure/tests/: public_api.rs
Src/crates/ddd-shared-kernel/: Cargo.toml  README.md
Src/crates/ddd-shared-kernel/examples/: jwt_usage.rs  saga_definition.rs  shared_kernel_overview.rs
Src/crates/ddd-shared-kernel/src/: aggregate.rs  blob_storage.rs  cache.rs  config_validation.rs  dead_letter.rs  domain_event.rs  entity.rs  error.rs  id.rs  idempotency.rs  inbox.rs  integration_event.rs  jwt.rs  lib.rs  outbox.rs  pagination.rs  saga.rs  security.rs  validation.rs  value_object.rs
Src/crates/ddd-shared-kernel/tests/: public_api.rs
Src/service/order-service/: Cargo.toml  build.rs
(+282 files in other folders)
