[package]
name = "sales-service"
version.workspace = true
edition.workspace = true
description = "Sales microservice — sales transactions, returns, and order saga (gRPC)."
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sales-service"
path = "src/main.rs"

[lib]
name = "sales_service"
path = "src/lib.rs"

[dependencies]
ddd-shared-kernel  = { workspace = true, features = ["validation"] }
ddd-application    = { workspace = true }
ddd-infrastructure = { workspace = true, features = ["postgres", "nats", "nats-jetstream", "storage"] }
ddd-api            = { workspace = true, features = ["grpc"] }

tonic       = { workspace = true }
tonic-prost = { workspace = true }
tonic-web   = { workspace = true }
prost       = { workspace = true }

sea-orm     = { workspace = true, features = ["with-rust_decimal"] }
sqlx        = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait  = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
inventory    = { workspace = true }
uuid         = { workspace = true }
rust_decimal = { workspace = true }
futures      = { workspace = true }
bytes        = { workspace = true }
async-nats   = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
