[package]
name = "ddd-api"
version.workspace = true
edition.workspace = true
description = "Reusable API building blocks for DDD microservices: gRPC + REST with interceptors, middleware, error mapping, pagination, validation, and OpenAPI"
license.workspace = true
rust-version.workspace = true

[features]
default   = ["grpc", "rest", "openapi"]
grpc      = ["dep:tonic", "dep:prost"]
rest      = ["dep:axum", "dep:tower-http"]
openapi   = ["dep:utoipa", "dep:utoipa-scalar", "rest"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
jwt       = ["ddd-shared-kernel/jwt"]
full      = ["grpc", "rest", "openapi", "telemetry", "jwt"]

[dependencies]
ddd-shared-kernel = { workspace = true }
ddd-application   = { workspace = true }

# gRPC
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

# REST / HTTP
axum       = { workspace = true, optional = true }
tower      = { workspace = true }
tower-http = { workspace = true, optional = true }

# OpenAPI
utoipa        = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }

# Serialisation
serde      = { workspace = true }
serde_json = { workspace = true }

# Telemetry (optional)
opentelemetry     = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

# Common
http             = { workspace = true }
tracing          = { workspace = true }
async-trait      = { workspace = true }
futures          = { workspace = true }
thiserror        = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
tokio            = { workspace = true }
tokio-stream     = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
