[package]
name = "ddd-bff"
version.workspace = true
edition.workspace = true
description = "Reusable building blocks for Backend-for-Frontend gateways: resilient gRPC client pool, axum observability middleware, Problem Details error mapping, OpenAPI catalogue, graceful shutdown."
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

## Implements `axum::response::IntoResponse` for `ProblemDetail` and adds
## `utoipa::ToSchema` derives on `ProblemDetail`/`FieldViolation`.
## Also enables the `IntoProblem` / `GrpcIntoProblem` convenience traits,
## the axum observability middleware, the Prometheus metrics handler,
## the generic OpenAPI router + spec merge utilities, and the HTTP proxy.
## Enable this in BFF services that use axum as their REST layer.
axum-response = ["dep:axum", "dep:utoipa", "dep:utoipa-scalar", "dep:reqwest"]

## Enables JWT bearer-token validation for BFF routes. Depends on the
## `axum-response` feature (the middleware is axum-based) and re-uses the
## generic `JwtValidator` from `ddd-shared-kernel`.
jwt = ["axum-response", "ddd-shared-kernel/jwt"]

[dependencies]
ddd-shared-kernel = { workspace = true, features = ["config-validation"] }

# Optional axum / OpenAPI support (enabled by `axum-response` feature)
axum          = { workspace = true, optional = true }
utoipa        = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
reqwest       = { workspace = true, optional = true }

# gRPC client (resilient channel + Status → AppError mapping)
tonic = { workspace = true }

# Serialisation
serde      = { workspace = true }
serde_json = { workspace = true }

# HTTP body helpers (axum observability middleware reads request bodies)
http-body-util = { workspace = true }

# Telemetry
tracing = { workspace = true }

# Metrics
prometheus  = { workspace = true }
lazy_static = { workspace = true }

# Async / runtime (graceful shutdown)
tokio      = { workspace = true }
tokio-util = { workspace = true }

# Common
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
